--- a/src/Pages/FindOutMoreCharities/FindOutMoreCharities.css
+++ b/src/Pages/FindOutMoreCharities/FindOutMoreCharities.css
@@ -17,3 +17,39 @@
     margin-top: 30px;
     color:  rgb(255, 125, 64);
 }
+
+.brand-quote-and-sub-heading {
+    font-size: 16px;
+}
+
+.charities-first-row {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); 
+    grid-gap: 2rem;
+    margin-bottom: 40px;
+    justify-items: center;
+    margin-left: 30px;
+
+}
+
+.charities-second-row {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); 
+    grid-gap: 2rem;
+    justify-items: center;
+    padding: 20px 20px;
+}
+
+.charity-logos img {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+    display: block;
+}
+
+.charity-logos img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain; 
+    display: block;
+}
